Bug squashing

--- a/app/client/stylesheets/_login.less
+++ b/app/client/stylesheets/_login.less
@@ -4,15 +4,11 @@
   background-color: @login-bg-color;
   background: @login-bg; 
   background-size: cover;
+  display: flex;
+  justify-content: center;
 
   > .container {
-    position: relative;
-    top: 50%;
-
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-
+    
     > .content {
       max-width: 320px;
       margin: 0 auto;
